- improved resizing behavior when log is closed/opened - generally improved logging - fixed a bug, that stopped a recording on its own